--- a/Proiect2D/Proiect2D.vcxproj.filters
+++ b/Proiect2D/Proiect2D.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClCompile Include="Ambulanta.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Tir.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Jucator.h">
@@ -56,6 +59,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Ambulanta.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Tir.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
