Implementare claxon :rocket:

--- a/Proiect2D/Proiect2D.vcxproj
+++ b/Proiect2D/Proiect2D.vcxproj
@@ -88,13 +88,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Grafica\OpenGL\freeglut\include;C:\Grafica\OpenGL\glew\include;D:\Programe\Microsoft Visual Studio\GL\glew-2.1.0\include;D:\Programe\Microsoft Visual Studio\GL\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Grafica\OpenGL\freeglut\include;C:\Grafica\OpenGL\glew\include;D:\Programe\Microsoft Visual Studio\GL\glew-2.1.0\include;D:\Programe\Microsoft Visual Studio\GL\freeglut\include;D:\Programe\Microsoft Visual Studio\GL\irrKlang-1.6.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Grafica\OpenGL\freeglut\lib;C:\Grafica\OpenGL\glew\lib\Release\Win32;D:\Programe\Microsoft Visual Studio\GL\glew-2.1.0\lib\Release\Win32;D:\Programe\Microsoft Visual Studio\GL\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>freeglut.lib;glew32.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Grafica\OpenGL\freeglut\lib;C:\Grafica\OpenGL\glew\lib\Release\Win32;D:\Programe\Microsoft Visual Studio\GL\glew-2.1.0\lib\Release\Win32;D:\Programe\Microsoft Visual Studio\GL\freeglut\lib;D:\Programe\Microsoft Visual Studio\GL\irrKlang-1.6.0\lib\Win32-visualStudio;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>freeglut.lib;glew32.lib;opengl32.lib;irrKlang.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -125,7 +125,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>D:\Programe\Microsoft Visual Studio\GL\glew-2.1.0\lib\Release\Win32;D:\Programe\Microsoft Visual Studio\GL\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>freeglut.lib;glew32.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>freeglut.lib;glew32.lib;opengl32.lib;irrKlang.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -147,6 +147,9 @@
   <ItemGroup>
     <None Include="freeglut.dll" />
     <None Include="glew32.dll" />
+    <None Include="ikpFlac.dll" />
+    <None Include="ikpMP3.dll" />
+    <None Include="irrKlang.dll" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ColoanaOficiala.cpp" />
@@ -163,10 +166,15 @@
     <ClInclude Include="Jucator.h" />
     <ClInclude Include="Masina.h" />
     <ClInclude Include="Ambulanta.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="Tir.h" />
   </ItemGroup>
   <ItemGroup>
-    <Media Include="honk.wav" />
+    <Media Include="Sound\claxon_ambulanta.wav" />
+    <Media Include="Sound\claxon_CO.wav" />
+    <Media Include="Sound\claxon_default.wav" />
+    <Media Include="Sound\claxon_tir.wav" />
+    <Media Include="Sound\close dor, start engine, drive.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
