--- a/Proiect2D/Proiect2D.vcxproj.filters
+++ b/Proiect2D/Proiect2D.vcxproj.filters
@@ -21,6 +21,15 @@
     <None Include="freeglut.dll">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="ikpFlac.dll">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="ikpMP3.dll">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="irrKlang.dll">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -64,9 +73,24 @@
     <ClInclude Include="Tir.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Media Include="honk.wav">
+    <Media Include="Sound\claxon_default.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="Sound\claxon_CO.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="Sound\claxon_ambulanta.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="Sound\claxon_tir.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="Sound\close dor, start engine, drive.wav">
       <Filter>Resource Files</Filter>
     </Media>
   </ItemGroup>
