--- a/Proiect2D/Proiect2D.vcxproj.filters
+++ b/Proiect2D/Proiect2D.vcxproj.filters
@@ -93,5 +93,14 @@
     <Media Include="Sound\close dor, start engine, drive.wav">
       <Filter>Resource Files</Filter>
     </Media>
+    <Media Include="Sound\car crash.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="Sound\claxon_ambulanta_baza.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="Sound\drive loop.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
   </ItemGroup>
 </Project>
